crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_function_default_snapshot@unknown_function_default_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlalchemy import Integer, Text, text
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class UnknownDefaults(DeclarativeBase):
    __tablename__ = "unknown_defaults"

    id: Mapped[int] = mapped_column(Integer, primary_key=True)
    code: Mapped[str] = mapped_column(Text, nullable=False, server_default=text("gen_code()"))
