crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_function_default_snapshot@unknown_function_default_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel
from sqlalchemy import text


class UnknownDefaults(SQLModel, table=True):
    __tablename__ = "unknown_defaults"

    id: int = Field(primary_key=True)
    code: str = Field(sa_column_kwargs={"server_default": text("gen_code()")})
