crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class UnnamedIndex(models.Model):
    id = models.IntegerField(primary_key=True)
    col_a = models.IntegerField()
    col_b = models.IntegerField()

    class Meta:
        managed = False
        db_table = "unnamed_index"
        indexes = [
            models.Index(fields=["col_a", "col_b"], name="ix_unnamed_index__col_a_col_b"),
        ]
