crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 192
expression: rendered
---
export const unnamedIndex = pgTable("unnamed_index", {
  id: integer("id").primaryKey(),
  colA: integer("col_a").notNull(),
  colB: integer("col_b").notNull(),
}, (t) => [
  index("ix_unnamed_index__col_a_col_b").on(t.colA, t.colB),
]);
