crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "unnamed_index", indexes = {
    @Index(columnList = "col_a, col_b")
})
public class UnnamedIndex {

    @Id
    @Column(name = "id")
    private Integer id;

    @Column(name = "col_a", nullable = false)
    private Integer colA;

    @Column(name = "col_b", nullable = false)
    private Integer colB;

    protected UnnamedIndex() {
    }
}
