crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model UnnamedIndex {
  id Int @id
  col_a Int
  col_b Int

  @@index([col_a, col_b], map: "ix_unnamed_index__col_a_col_b")
  @@map("unnamed_index")
}
